# pg-mcp-server

./: README.md  pyproject.toml  test_query.py
src/pg_mcp_server/: __main__.py  config.py  executor.py  server.py
tests/: test_read_only.py
