[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-mcp-server"
version = "0.1.4"
description = "PostgreSQL MCP server via psql subprocess"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
pg-mcp-server = "pg_mcp_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_mcp_server"]
